feat(locales): add Italian translations

--- a/src/locales/it/activity-management.json
+++ b/src/locales/it/activity-management.json
@@ -9,7 +9,7 @@
   "delete": "Elimina",
   "deleteTitle": "Elimina Attività",
   "subject": "Oggetto",
-  "activityType": "Tipo Attività",
+  "activityType": "Tipo di Attività",
   "potentialCustomerId": "Cliente Potenziale",
   "potentialCustomer": "Cliente",
   "customer": "Cliente",
@@ -30,13 +30,13 @@
   "updatedDate": "Data Aggiornamento",
   "actions": "Azioni",
   "search": "Cerca",
-  "filterByActivityType": "Filtra per Tipo Attività",
+  "filterByActivityType": "Filtra per Tipo di Attività",
   "filterByStatus": "Filtra per Stato",
   "filterByPriority": "Filtra per Priorità",
   "filterByPotentialCustomer": "Filtra per Cliente",
   "filterByContact": "Filtra per Contatto",
   "filterByAssignedUser": "Filtra per Utente Assegnato",
-  "filterByIsCompleted": "Filtra per Stato Completamento",
+  "filterByIsCompleted": "Filtra per Stato di Completamento",
   "filterByCreatedDateRange": "Filtra per Intervallo Data Creazione",
   "noData": "Nessun dato trovato",
   "confirmDelete": "Sei sicuro di voler eliminare questa attività?",
@@ -47,16 +47,16 @@
   "updateError": "Si è verificato un errore durante l'aggiornamento dell'attività",
   "deleteError": "Si è verificato un errore durante l'eliminazione dell'attività",
   "subjectRequired": "L'oggetto è obbligatorio",
-  "subjectMaxLength": "L'oggetto deve essere di massimo 100 caratteri",
-  "descriptionMaxLength": "La descrizione deve essere di massimo 500 caratteri",
+  "subjectMaxLength": "L'oggetto deve contenere al massimo 100 caratteri",
+  "descriptionMaxLength": "La descrizione deve contenere al massimo 500 caratteri",
   "activityTypeRequired": "La selezione del tipo di attività è obbligatoria",
-  "activityTypeMaxLength": "Il tipo di attività deve essere di massimo 50 caratteri",
+  "activityTypeMaxLength": "Il tipo di attività deve contenere al massimo 50 caratteri",
   "statusRequired": "La selezione dello stato è obbligatoria",
-  "statusMaxLength": "Lo stato deve essere di massimo 50 caratteri",
-  "priorityMaxLength": "La priorità deve essere di massimo 50 caratteri",
+  "statusMaxLength": "Lo stato deve contenere al massimo 50 caratteri",
+  "priorityMaxLength": "La priorità deve contenere al massimo 50 caratteri",
   "enterSubject": "Inserisci Oggetto",
   "enterDescription": "Inserisci Descrizione (Opzionale)",
-  "selectActivityType": "Seleziona Tipo Attività",
+  "selectActivityType": "Seleziona Tipo di Attività",
   "selectPotentialCustomer": "Seleziona Cliente Potenziale (Opzionale)",
   "enterErpCustomerCode": "Inserisci Codice Cliente ERP (Opzionale)",
   "selectStatus": "Seleziona Stato",
@@ -89,13 +89,52 @@
   "markAsInProgressSuccess": "Attività segnata come in corso",
   "cancelSuccess": "Attività annullata",
   "statusChangeWarning": "Sei sicuro di voler cambiare lo stato?",
-  "autoCompleteStatus": "Verrà automaticamente segnato quando lo stato è impostato su 'Completato'",
+  "autoCompleteStatus": "Sarà segnato automaticamente quando lo stato è impostato su 'Completato'",
   "activityTypeCall": "Chiamata",
   "activityTypeMeeting": "Riunione",
   "activityTypeEmail": "Email",
   "activityTypeTask": "Compito",
   "activityTypeNote": "Nota",
   "activityTypeEvent": "Evento",
-  "statusScheduled": "Pianificato",
-  "statusInProgress": "In Corso"
+  "statusScheduled": "Programmato",
+  "statusInProgress": "In Corso",
+  "statusCompleted": "Completato",
+  "statusCanceled": "Annullato",
+  "statusPostponed": "Posticipato",
+  "priorityLow": "Bassa",
+  "priorityMedium": "Media",
+  "priorityHigh": "Alta",
+  "allActivityTypes": "Tutti i Tipi di Attività",
+  "allStatuses": "Tutti gli Stati",
+  "allPriorities": "Tutte le Priorità",
+  "completedActivities": "Attività Completate",
+  "pendingActivities": "Attività In Sospeso",
+  "highPriorityActivities": "Attività ad Alta Priorità",
+  "noCompletedActivities": "Nessuna attività completata trovata",
+  "noPendingActivities": "Nessuna attività in sospeso trovata",
+  "activityDetails": "Dettagli Attività",
+  "customerInformation": "Informazioni Cliente",
+  "contactInformation": "Informazioni Contatto",
+  "assignedUserInformation": "Informazioni Utente Assegnato",
+  "calendarView": "Vista Calendario",
+  "kanbanView": "Vista Kanban",
+  "tableView": "Vista Tabella",
+  "switchToCalendar": "Passa alla Vista Calendario",
+  "switchToKanban": "Passa alla Vista Kanban",
+  "switchToTable": "Passa alla Vista Tabella",
+  "table": {
+    "id": "ID",
+    "subject": "Oggetto",
+    "activityType": "Tipo di Attività",
+    "status": "Stato",
+    "priority": "Priorità",
+    "potentialCustomer": "Cliente",
+    "contact": "Contatto",
+    "assignedUser": "Assegnato A",
+    "isCompleted": "Completato",
+    "createdDate": "Data Creazione",
+    "updatedDate": "Data Aggiornamento",
+    "showing": "Visualizzazione {{from}}-{{to}} di {{total}}",
+    "page": "Pagina {{current}} di {{total}}"
+  }
 }
