--- a/src/locales/it/approval-role-management.json
+++ b/src/locales/it/approval-role-management.json
@@ -1,51 +1,51 @@
 {
   "approvalRole": {
-    "menu": "Approval Role Management",
-    "description": "Manage and organize approval roles",
-    "addButton": "Add New Approval Role",
-    "searchPlaceholder": "Search...",
-    "refresh": "Refresh",
-    "loading": "Loading...",
-    "noData": "No data",
+    "menu": "Gestione Ruoli di Approvazione",
+    "description": "Gestisci e organizza i ruoli di approvazione",
+    "addButton": "Aggiungi Nuovo Ruolo",
+    "searchPlaceholder": "Cerca...",
+    "refresh": "Aggiorna",
+    "loading": "Caricamento...",
+    "noData": "Nessun dato",
     "table": {
       "id": "ID",
-      "approvalRoleGroupName": "Role Group",
-      "name": "Role Name",
-      "maxAmount": "Max Amount",
-      "createdDate": "Created Date",
-      "createdBy": "Created By",
-      "actions": "Actions",
-      "totalRecords": "Total {{count}} records.",
-      "page": "Page {{current}} / {{total}}",
-      "previous": "Previous",
-      "next": "Next"
+      "approvalRoleGroupName": "Gruppo Ruoli",
+      "name": "Nome Ruolo",
+      "maxAmount": "Importo Massimo",
+      "createdDate": "Data Creazione",
+      "createdBy": "Creato Da",
+      "actions": "Azioni",
+      "totalRecords": "Totale {{count}} record.",
+      "page": "Pagina {{current}} / {{total}}",
+      "previous": "Precedente",
+      "next": "Successivo"
     },
     "delete": {
-      "confirmTitle": "Delete Confirmation",
-      "confirmMessage": "Are you sure you want to delete this record? This action cannot be undone.",
-      "cancelButton": "Cancel",
-      "confirmButton": "Delete",
-      "deleting": "Deleting..."
+      "confirmTitle": "Conferma Eliminazione",
+      "confirmMessage": "Sei sicuro di voler eliminare questo record? Questa azione non può essere annullata.",
+      "cancelButton": "Annulla",
+      "confirmButton": "Elimina",
+      "deleting": "Eliminazione..."
     },
     "form": {
-      "editTitle": "Edit Approval Role",
-      "addTitle": "Add New Approval Role",
-      "editDescription": "Edit approval role details",
-      "addDescription": "Enter new approval role details",
-      "approvalRoleGroupId": "Approval Role Group",
-      "selectApprovalRoleGroup": "Select Approval Role Group",
-      "noApprovalRoleGroupSelected": "No approval role group selected",
-      "name": "Role Name",
-      "namePlaceholder": "Enter role name",
-      "maxAmount": "Max Amount",
-      "maxAmountPlaceholder": "Enter max amount",
-      "approvalRoleGroupIdRequired": "Approval role group selection is required",
-      "nameRequired": "Role name is required",
-      "nameMaxLength": "Role name can be at most 100 characters",
-      "maxAmountMin": "Max amount cannot be less than 0",
-      "cancel": "Cancel",
-      "save": "Save",
-      "saving": "Saving..."
+      "editTitle": "Modifica Ruolo di Approvazione",
+      "addTitle": "Aggiungi Nuovo Ruolo di Approvazione",
+      "editDescription": "Modifica dettagli ruolo di approvazione",
+      "addDescription": "Inserisci dettagli nuovo ruolo",
+      "approvalRoleGroupId": "Gruppo Ruoli di Approvazione",
+      "selectApprovalRoleGroup": "Seleziona Gruppo Ruoli",
+      "noApprovalRoleGroupSelected": "Nessun gruppo selezionato",
+      "name": "Nome Ruolo",
+      "namePlaceholder": "Inserisci nome ruolo",
+      "maxAmount": "Importo Massimo",
+      "maxAmountPlaceholder": "Inserisci importo massimo",
+      "approvalRoleGroupIdRequired": "La selezione del gruppo è obbligatoria",
+      "nameRequired": "Il nome del ruolo è obbligatorio",
+      "nameMaxLength": "Il nome può avere max 100 caratteri",
+      "maxAmountMin": "L'importo massimo non può essere inferiore a 0",
+      "cancel": "Annulla",
+      "save": "Salva",
+      "saving": "Salvataggio..."
     }
   }
 }
