--- a/src/locales/it/contact-management.json
+++ b/src/locales/it/contact-management.json
@@ -1,5 +1,5 @@
 {
-  "menu": "Gestione Contatti Cliente",
+  "menu": "Gestione Contatti Clienti",
   "description": "Gestisci e modifica i contatti dei clienti",
   "addButton": "Aggiungi Nuovo Contatto",
   "stats": {
@@ -26,25 +26,25 @@
   "form": {
     "addContact": "Aggiungi Nuovo Contatto",
     "editContact": "Modifica Contatto",
-    "addDescription": "Inserisci informazioni nuovo contatto",
-    "editDescription": "Modifica informazioni contatto",
+    "addDescription": "Inserisci le informazioni del nuovo contatto",
+    "editDescription": "Modifica le informazioni del contatto",
     "fullName": "Nome Completo",
     "fullNamePlaceholder": "Inserisci nome completo",
     "fullNameRequired": "Il nome completo è obbligatorio",
-    "fullNameMaxLength": "Il nome completo deve essere di massimo 100 caratteri",
+    "fullNameMaxLength": "Il nome completo deve contenere al massimo 100 caratteri",
     "email": "Email",
     "emailPlaceholder": "Inserisci indirizzo email (opzionale)",
     "emailInvalid": "Inserisci un indirizzo email valido",
-    "emailMaxLength": "L'email deve essere di massimo 100 caratteri",
+    "emailMaxLength": "L'email deve contenere al massimo 100 caratteri",
     "phone": "Telefono",
     "phonePlaceholder": "Inserisci numero di telefono (opzionale)",
-    "phoneMaxLength": "Il telefono deve essere di massimo 20 caratteri",
+    "phoneMaxLength": "Il telefono deve contenere al massimo 20 caratteri",
     "mobile": "Cellulare",
     "mobilePlaceholder": "Inserisci numero di cellulare (opzionale)",
-    "mobileMaxLength": "Il cellulare deve essere di massimo 20 caratteri",
+    "mobileMaxLength": "Il cellulare deve contenere al massimo 20 caratteri",
     "notes": "Note",
     "notesPlaceholder": "Inserisci note (opzionale)",
-    "notesMaxLength": "Le note devono essere di massimo 250 caratteri",
+    "notesMaxLength": "Le note devono contenere al massimo 250 caratteri",
     "customer": "Cliente",
     "selectCustomer": "Seleziona cliente",
     "customerRequired": "La selezione del cliente è obbligatoria",
