--- a/src/locales/it/country-management.json
+++ b/src/locales/it/country-management.json
@@ -1,52 +1,52 @@
 {
-  "menu": "Country Management",
-  "description": "Manage and edit countries",
-  "addButton": "Add New Country",
-  "search": "Search...",
-  "loading": "Loading...",
-  "noData": "No data found",
-  "actions": "Actions",
-  "previous": "Previous",
-  "next": "Next",
-  "deleteConfirmTitle": "Delete Confirmation",
-  "cancel": "Cancel",
-  "deleting": "Deleting...",
-  "delete": "Delete",
-  "saving": "Saving...",
-  "save": "Save",
+  "menu": "Gestione Paesi",
+  "description": "Gestisci e modifica i paesi",
+  "addButton": "Aggiungi Nuovo Paese",
+  "search": "Cerca...",
+  "loading": "Caricamento...",
+  "noData": "Nessun dato trovato",
+  "actions": "Azioni",
+  "previous": "Precedente",
+  "next": "Successivo",
+  "deleteConfirmTitle": "Conferma Eliminazione",
+  "cancel": "Annulla",
+  "deleting": "Eliminazione...",
+  "delete": "Elimina",
+  "saving": "Salvataggio...",
+  "save": "Salva",
   "stats": {
-    "totalCountries": "Total Countries",
-    "activeCountries": "Active Countries",
-    "newThisMonth": "New This Month"
+    "totalCountries": "Paesi Totali",
+    "activeCountries": "Paesi Attivi",
+    "newThisMonth": "Nuovi questo Mese"
   },
   "table": {
     "id": "ID",
-    "name": "Country Name",
-    "code": "Code",
-    "erpCode": "ERP Code",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "name": "Nome Paese",
+    "code": "Codice",
+    "erpCode": "Codice ERP",
+    "createdDate": "Data Creazione",
+    "createdBy": "Creato Da",
+    "showing": "Mostrando {{from}}-{{to}} / {{total}}",
+    "page": "Pagina {{current}} / {{total}}"
   },
   "form": {
-    "addCountry": "Add New Country",
-    "editCountry": "Edit Country",
-    "addDescription": "Enter new country information",
-    "editDescription": "Edit country information",
-    "name": "Country Name",
-    "namePlaceholder": "Enter country name",
-    "code": "Country Code",
-    "codePlaceholder": "Enter country code (e.g. TR, US)",
-    "erpCode": "ERP Code",
-    "erpCodePlaceholder": "Enter ERP code (optional)",
-    "nameRequired": "Country name is required",
-    "nameMaxLength": "Country name cannot exceed 100 characters",
-    "codeMinLength": "Country code must be at least 2 characters",
-    "codeMaxLength": "Country code cannot exceed 5 characters",
-    "erpCodeMaxLength": "ERP code cannot exceed 10 characters"
+    "addCountry": "Aggiungi Nuovo Paese",
+    "editCountry": "Modifica Paese",
+    "addDescription": "Inserisci informazioni nuovo paese",
+    "editDescription": "Modifica informazioni paese",
+    "name": "Nome Paese",
+    "namePlaceholder": "Inserisci nome paese",
+    "code": "Codice Paese",
+    "codePlaceholder": "Inserisci codice paese (es. IT, US)",
+    "erpCode": "Codice ERP",
+    "erpCodePlaceholder": "Inserisci codice ERP (opzionale)",
+    "nameRequired": "Il nome del paese è obbligatorio",
+    "nameMaxLength": "Il nome del paese non può superare 100 caratteri",
+    "codeMinLength": "Il codice paese deve essere di almeno 2 caratteri",
+    "codeMaxLength": "Il codice paese non può superare 5 caratteri",
+    "erpCodeMaxLength": "Il codice ERP non può superare 10 caratteri"
   },
   "deleteConfirm": {
-    "confirmMessage": "Are you sure you want to delete {{name}}?"
+    "confirmMessage": "Sei sicuro di voler eliminare {{name}}?"
   }
 }
