--- a/src/locales/it/customer-management.json
+++ b/src/locales/it/customer-management.json
@@ -1,6 +1,6 @@
 {
   "menu": "Gestione Clienti",
-  "description": "Gestisci e modifica clienti",
+  "description": "Gestisci e modifica i clienti",
   "addButton": "Aggiungi Nuovo Cliente",
   "stats": {
     "totalCustomers": "Totale Clienti",
@@ -12,7 +12,7 @@
     "customerCode": "Codice Cliente",
     "name": "Nome Cliente",
     "customerType": "Tipo Cliente",
-    "tcknNumber": "Codice Fiscale",
+    "tcknNumber": "Numero TCKN",
     "country": "Paese",
     "city": "Città",
     "district": "Distretto",
@@ -27,55 +27,55 @@
   "form": {
     "addCustomer": "Aggiungi Nuovo Cliente",
     "editCustomer": "Modifica Cliente",
-    "addDescription": "Inserisci nuove informazioni cliente",
-    "editDescription": "Modifica informazioni cliente",
+    "addDescription": "Inserisci le informazioni del nuovo cliente",
+    "editDescription": "Modifica le informazioni del cliente",
     "customerCode": "Codice Cliente",
     "customerCodePlaceholder": "Inserisci codice cliente (opzionale)",
-    "customerCodeMaxLength": "Il codice cliente deve essere di massimo 100 caratteri",
+    "customerCodeMaxLength": "Il codice cliente deve contenere al massimo 100 caratteri",
     "name": "Nome Cliente",
     "namePlaceholder": "Inserisci nome cliente",
-    "nameRequired": "Il nome cliente è richiesto",
-    "nameMaxLength": "Il nome cliente deve essere di massimo 250 caratteri",
-    "taxNumber": "Partita IVA",
-    "taxNumberPlaceholder": "Inserisci partita IVA (opzionale)",
-    "taxNumberMaxLength": "La partita IVA deve essere di massimo 15 caratteri",
+    "nameRequired": "Il nome del cliente è obbligatorio",
+    "nameMaxLength": "Il nome del cliente deve contenere al massimo 250 caratteri",
+    "taxNumber": "Codice Fiscale",
+    "taxNumberPlaceholder": "Inserisci codice fiscale (opzionale)",
+    "taxNumberMaxLength": "Il codice fiscale deve contenere al massimo 15 caratteri",
     "taxOffice": "Ufficio Fiscale",
     "taxOfficePlaceholder": "Inserisci ufficio fiscale (opzionale)",
-    "taxOfficeMaxLength": "L'ufficio fiscale deve essere di massimo 100 caratteri",
-    "tcknNumber": "Codice Fiscale",
-    "tcknNumberPlaceholder": "Inserisci codice fiscale (opzionale)",
-    "tcknNumberMaxLength": "Il codice fiscale deve essere di massimo 20 caratteri",
+    "taxOfficeMaxLength": "L'ufficio fiscale deve contenere al massimo 100 caratteri",
+    "tcknNumber": "Numero TCKN",
+    "tcknNumberPlaceholder": "Inserisci numero TCKN (opzionale)",
+    "tcknNumberMaxLength": "Il numero TCKN deve contenere al massimo 20 caratteri",
     "address": "Indirizzo",
     "addressPlaceholder": "Inserisci indirizzo (opzionale)",
-    "addressMaxLength": "L'indirizzo deve essere di massimo 500 caratteri",
+    "addressMaxLength": "L'indirizzo deve contenere al massimo 500 caratteri",
     "phone": "Telefono",
     "phonePlaceholder": "Inserisci numero di telefono (opzionale)",
-    "phoneMaxLength": "Il numero di telefono deve essere di massimo 100 caratteri",
+    "phoneMaxLength": "Il numero di telefono deve contenere al massimo 100 caratteri",
     "email": "Email",
     "emailPlaceholder": "Inserisci indirizzo email (opzionale)",
     "emailInvalid": "Inserisci un indirizzo email valido",
-    "emailMaxLength": "L'indirizzo email deve essere di massimo 100 caratteri",
+    "emailMaxLength": "L'indirizzo email deve contenere al massimo 100 caratteri",
     "website": "Sito Web",
     "websitePlaceholder": "Inserisci indirizzo sito web (opzionale)",
-    "websiteMaxLength": "L'indirizzo sito web deve essere di massimo 100 caratteri",
+    "websiteMaxLength": "L'indirizzo del sito web deve contenere al massimo 100 caratteri",
     "notes": "Note",
     "notesPlaceholder": "Inserisci note (opzionale)",
-    "notesMaxLength": "Le note devono essere di massimo 250 caratteri",
+    "notesMaxLength": "Le note devono contenere al massimo 250 caratteri",
     "country": "Paese",
     "selectCountry": "Seleziona paese",
-    "countryRequired": "La selezione del paese è richiesta",
+    "countryRequired": "La selezione del paese è obbligatoria",
     "city": "Città",
     "selectCity": "Seleziona città",
-    "cityRequired": "La selezione della città è richiesta",
+    "cityRequired": "La selezione della città è obbligatoria",
     "district": "Distretto",
     "selectDistrict": "Seleziona distretto",
-    "districtRequired": "La selezione del distretto è richiesta",
+    "districtRequired": "La selezione del distretto è obbligatoria",
     "customerType": "Tipo Cliente",
     "selectCustomerType": "Seleziona tipo cliente",
-    "customerTypeRequired": "La selezione del tipo cliente è richiesta",
+    "customerTypeRequired": "La selezione del tipo cliente è obbligatoria",
     "erpCode": "Codice ERP",
     "erpCodePlaceholder": "Inserisci codice ERP (opzionale)",
-    "erpCodeMaxLength": "Il codice ERP deve essere di massimo 20 caratteri",
+    "erpCodeMaxLength": "Il codice ERP deve contenere al massimo 20 caratteri",
     "isApproved": "Approvato",
     "isCompleted": "Completato",
     "isERPIntegrated": "Integrato ERP"
@@ -97,6 +97,9 @@
   "messages": {
     "createSuccess": "Cliente creato con successo",
     "createError": "Impossibile creare il cliente",
-    "updateSuccess": "Cliente aggiornato con successo"
+    "updateSuccess": "Cliente aggiornato con successo",
+    "updateError": "Impossibile aggiornare il cliente",
+    "deleteSuccess": "Cliente eliminato con successo",
+    "deleteError": "Impossibile eliminare il cliente"
   }
 }
