--- a/src/locales/it/customer-select-dialog.json
+++ b/src/locales/it/customer-select-dialog.json
@@ -1,24 +1,24 @@
 {
-  "title": "Select Customer",
-  "description": "Select a tab and choose a customer from the list",
-  "erpCustomers": "ERP Customer",
-  "crmCustomers": "CRM Customers",
-  "allCustomers": "All",
+  "title": "Seleziona Cliente",
+  "description": "Seleziona una scheda e scegli un cliente dall'elenco",
+  "erpCustomers": "Clienti ERP",
+  "crmCustomers": "Clienti CRM",
+  "allCustomers": "Tutti",
   "erp": "ERP",
   "crm": "CRM",
-  "noErpCustomers": "No ERP customers found",
-  "noCrmCustomers": "No CRM customers found",
-  "noCustomers": "No customers found",
-  "noResults": "No search results found",
-  "searchPlaceholder": "Search by name or code...",
-  "voiceSearch": "Voice search",
-  "loading": "Loading",
+  "noErpCustomers": "Nessun cliente ERP trovato",
+  "noCrmCustomers": "Nessun cliente CRM trovato",
+  "noCustomers": "Nessun cliente trovato",
+  "noResults": "Nessun risultato di ricerca trovato",
+  "searchPlaceholder": "Cerca per nome o codice...",
+  "voiceSearch": "Ricerca vocale",
+  "loading": "Caricamento",
   "table": {
-    "type": "Type",
-    "customerCode": "Customer Code",
-    "customerName": "Customer Name",
-    "phone": "Phone",
-    "city": "City",
+    "type": "Tipo",
+    "customerCode": "Codice Cliente",
+    "customerName": "Nome Cliente",
+    "phone": "Telefono",
+    "city": "Città",
     "email": "Email"
   }
 }
