--- a/src/locales/it/customer-type-management.json
+++ b/src/locales/it/customer-type-management.json
@@ -26,15 +26,15 @@
   "form": {
     "addCustomerType": "Aggiungi Nuovo Tipo Cliente",
     "editCustomerType": "Modifica Tipo Cliente",
-    "addDescription": "Inserisci informazioni nuovo tipo cliente",
-    "editDescription": "Modifica informazioni tipo cliente",
+    "addDescription": "Inserisci le informazioni del nuovo tipo cliente",
+    "editDescription": "Modifica le informazioni del tipo cliente",
     "name": "Nome Tipo Cliente",
     "namePlaceholder": "Inserisci nome tipo cliente",
     "nameRequired": "Il nome del tipo cliente è obbligatorio",
-    "nameMaxLength": "Il nome del tipo cliente deve essere di massimo 100 caratteri",
+    "nameMaxLength": "Il nome del tipo cliente deve contenere al massimo 100 caratteri",
     "description": "Descrizione",
     "descriptionPlaceholder": "Inserisci descrizione (opzionale)",
-    "descriptionMaxLength": "La descrizione deve essere di massimo 500 caratteri",
+    "descriptionMaxLength": "La descrizione deve contenere al massimo 500 caratteri",
     "cancel": "Annulla",
     "save": "Salva",
     "saving": "Salvataggio..."
