--- a/src/locales/it/daily-tasks.json
+++ b/src/locales/it/daily-tasks.json
@@ -1,42 +1,42 @@
 {
-  "title": "Daily Tasks",
-  "fullTitle": "Daily Activities & To-Do",
-  "subtitle": "Manage your tasks, track activities, and use the calendar view",
-  "completed": "Completed",
-  "pending": "Pending",
-  "completion": "Completion",
-  "searchPlaceholder": "Search task...",
-  "allTasks": "All Tasks",
-  "priority": "Priority",
-  "allPriorities": "All",
-  "newTask": "New Task",
-  "newTodo": "New To-Do",
-  "noTasks": "No tasks found",
-  "tasks": "Tasks",
-  "weeklyTasks": "Weekly Tasks",
-  "todoList": "To-Do List",
-  "dailyList": "Daily List",
-  "calendar": "Calendar",
-  "status": "Status:",
-  "all": "All",
-  "inProgress": "In Progress",
-  "employee": "Employee:",
-  "allEmployees": "All Employees",
-  "unassigned": "Unassigned",
-  "unknownUser": "Unknown User",
-  "start": "Start",
-  "putOnHold": "Put on Hold",
-  "complete": "Complete",
-  "more": "more",
-  "today": "Today",
-  "loading": "Loading...",
+  "title": "Compiti Giornalieri",
+  "fullTitle": "Attività Giornaliere e Cose da Fare",
+  "subtitle": "Gestisci i tuoi compiti, traccia le attività e usa la vista calendario",
+  "completed": "Completato",
+  "pending": "In Sospeso",
+  "completion": "Completamento",
+  "searchPlaceholder": "Cerca compito...",
+  "allTasks": "Tutti i Compiti",
+  "priority": "Priorità",
+  "allPriorities": "Tutte",
+  "newTask": "Nuovo Compito",
+  "newTodo": "Nuova Cosa da Fare",
+  "noTasks": "Nessun compito trovato",
+  "tasks": "Compiti",
+  "weeklyTasks": "Compiti Settimanali",
+  "todoList": "Lista Cose da Fare",
+  "dailyList": "Lista Giornaliera",
+  "calendar": "Calendario",
+  "status": "Stato:",
+  "all": "Tutti",
+  "inProgress": "In Corso",
+  "employee": "Dipendente:",
+  "allEmployees": "Tutti i Dipendenti",
+  "unassigned": "Non Assegnato",
+  "unknownUser": "Utente Sconosciuto",
+  "start": "Inizia",
+  "putOnHold": "Metti in Attesa",
+  "complete": "Completa",
+  "more": "altro",
+  "today": "Oggi",
+  "loading": "Caricamento...",
   "days": {
-    "mon": "Mon",
-    "tue": "Tue",
-    "wed": "Wed",
-    "thu": "Thu",
-    "fri": "Fri",
-    "sat": "Sat",
-    "sun": "Sun"
+    "mon": "Lun",
+    "tue": "Mar",
+    "wed": "Mer",
+    "thu": "Gio",
+    "fri": "Ven",
+    "sat": "Sab",
+    "sun": "Dom"
   }
 }
