--- a/src/locales/it/dashboard.json
+++ b/src/locales/it/dashboard.json
@@ -7,10 +7,10 @@
     "newLeads": "Nuovi Lead",
     "pendingOrders": "Ordini in Sospeso"
   },
-  "salesAnalysis": "Analisi Vendite",
+  "salesAnalysis": "Analisi delle Vendite",
   "targetVsActual": "Obiettivo vs Reale",
   "latestActivities": "Ultime Attività",
-  "viewAll": "Vedi Tutti",
+  "viewAll": "Visualizza Tutto",
   "reportDownload": "Scarica Report",
   "quickAction": "Azione Rapida",
   "activityType": {
