--- a/src/locales/it/erp-customer-management.json
+++ b/src/locales/it/erp-customer-management.json
@@ -1,22 +1,22 @@
 {
-  "menu": "ERP Customer",
-  "description": "Customer list from ERP system",
-  "loading": "Loading...",
-  "noData": "No customers found",
+  "menu": "Clienti ERP",
+  "description": "Elenco clienti dal sistema ERP",
+  "loading": "Caricamento...",
+  "noData": "Nessun cliente trovato",
   "table": {
-    "branchCode": "Branch Code",
-    "businessUnitCode": "Business Unit Code",
-    "customerCode": "Customer Code",
-    "customerName": "Customer Name",
-    "phone": "Phone",
-    "city": "City",
-    "district": "District",
-    "address": "Address",
-    "countryCode": "Country Code",
+    "branchCode": "Codice Filiale",
+    "businessUnitCode": "Codice Unità Aziendale",
+    "customerCode": "Codice Cliente",
+    "customerName": "Nome Cliente",
+    "phone": "Telefono",
+    "city": "Città",
+    "district": "Distretto",
+    "address": "Indirizzo",
+    "countryCode": "Codice Paese",
     "email": "Email",
-    "website": "Website",
-    "taxNumber": "Tax Number",
-    "taxOffice": "Tax Office",
-    "tcknNumber": "TCKN Number"
+    "website": "Sito Web",
+    "taxNumber": "Codice Fiscale",
+    "taxOffice": "Ufficio Fiscale",
+    "tcknNumber": "Numero TCKN"
   }
 }
