--- a/src/locales/it/quotation-line-management.json
+++ b/src/locales/it/quotation-line-management.json
@@ -1,132 +1,132 @@
 {
-  "title": "Quotation Line Management",
-  "description": "Manage and edit quotation lines",
-  "create": "New Quotation Line",
-  "createDescription": "Enter new quotation line information",
-  "edit": "Edit Quotation Line",
-  "editDescription": "Edit quotation line information",
-  "delete": "Delete",
-  "deleteTitle": "Delete Quotation Line",
-  "quotationId": "Quotation ID",
-  "productId": "Product ID",
-  "productCode": "Product Code",
-  "productName": "Product Name",
-  "quantity": "Quantity",
-  "unitPrice": "Unit Price",
-  "discountRate1": "Discount Rate 1",
-  "discountAmount1": "Discount Amount 1",
-  "discountRate2": "Discount Rate 2",
-  "discountAmount2": "Discount Amount 2",
-  "discountRate3": "Discount Rate 3",
-  "discountAmount3": "Discount Amount 3",
-  "vatRate": "VAT Rate",
-  "vatAmount": "VAT Amount",
-  "lineTotal": "Line Total (Excl. VAT)",
-  "lineGrandTotal": "Line Total (Incl. VAT)",
-  "description": "Description",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "filterByQuotationId": "Filter by Quotation",
-  "filterByProductCode": "Filter by Product Code",
-  "filterByProductName": "Filter by Product Name",
-  "filterByQuantityRange": "Filter by Quantity Range",
-  "filterByUnitPriceRange": "Filter by Unit Price Range",
-  "filterByLineTotalRange": "Filter by Line Total Range",
-  "filterByLineGrandTotalRange": "Filter by Line Grand Total Range",
-  "noData": "No data found",
-  "confirmDelete": "Are you sure you want to delete this quotation line?",
-  "createSuccess": "Quotation line created successfully",
-  "updateSuccess": "Quotation line updated successfully",
-  "deleteSuccess": "Quotation line deleted successfully",
-  "createError": "An error occurred while creating quotation line",
-  "updateError": "An error occurred while updating quotation line",
-  "deleteError": "An error occurred while deleting quotation line",
-  "quotationIdRequired": "Quotation ID is required",
-  "productIdRequired": "Product selection is required",
-  "productNameRequired": "Product name is required",
-  "productNameMaxLength": "Product name must be at most 250 characters",
-  "productCodeMaxLength": "Product code must be at most 100 characters",
-  "quantityRequired": "Quantity is required",
-  "quantityMin": "Quantity must be 0 or greater",
-  "unitPriceRequired": "Unit price is required",
-  "unitPriceMin": "Unit price must be 0 or greater",
-  "discountRate1Range": "Discount rate 1 must be between 0 and 100",
-  "discountRate2Range": "Discount rate 2 must be between 0 and 100",
-  "discountRate3Range": "Discount rate 3 must be between 0 and 100",
-  "discountAmount1Min": "Discount amount 1 must be 0 or greater",
-  "discountAmount2Min": "Discount amount 2 must be 0 or greater",
-  "discountAmount3Min": "Discount amount 3 must be 0 or greater",
-  "vatRateRequired": "VAT rate is required",
-  "vatRateRange": "VAT rate must be between 0 and 100",
-  "descriptionMaxLength": "Description must be at most 250 characters",
-  "selectQuotation": "Select Quotation",
-  "selectProduct": "Select Product",
-  "enterProductCode": "Enter Product Code",
-  "enterProductName": "Enter Product Name",
-  "enterQuantity": "Enter Quantity",
-  "enterUnitPrice": "Enter Unit Price",
-  "enterDiscountRate1": "Enter Discount Rate 1 (0-100, Optional)",
-  "enterDiscountAmount1": "Enter Discount Amount 1 (Optional)",
-  "enterDiscountRate2": "Enter Discount Rate 2 (0-100, Optional)",
-  "enterDiscountAmount2": "Enter Discount Amount 2 (Optional)",
-  "enterDiscountRate3": "Enter Discount Rate 3 (0-100, Optional)",
-  "enterDiscountAmount3": "Enter Discount Amount 3 (Optional)",
-  "enterVatRate": "Enter VAT Rate (0-100)",
-  "enterDescription": "Enter Description (Optional)",
-  "calculation": "Calculation",
-  "calculationBreakdown": "Calculation Breakdown",
-  "subtotal": "Subtotal",
-  "afterDiscount1": "After Discount 1",
-  "afterDiscount2": "After Discount 2",
-  "afterDiscount3": "After Discount 3",
-  "vatBreakdown": "VAT Breakdown",
-  "grandTotal": "Grand Total",
-  "loading": "Loading...",
-  "save": "Save",
-  "cancel": "Cancel",
-  "close": "Close",
-  "clearFilters": "Clear Filters",
-  "applyFilters": "Apply Filters",
-  "minQuantity": "Min Quantity",
-  "maxQuantity": "Max Quantity",
-  "minUnitPrice": "Min Unit Price",
-  "maxUnitPrice": "Max Unit Price",
-  "minLineTotal": "Min Line Total",
-  "maxLineTotal": "Max Line Total",
-  "minLineGrandTotal": "Min Line Grand Total",
-  "maxLineGrandTotal": "Max Line Grand Total",
+  "title": "Gestione Righe Preventivo",
+  "description": "Gestisci e modifica le righe del preventivo",
+  "create": "Nuova Riga Preventivo",
+  "createDescription": "Inserisci informazioni nuova riga preventivo",
+  "edit": "Modifica Riga Preventivo",
+  "editDescription": "Modifica informazioni riga preventivo",
+  "delete": "Elimina",
+  "deleteTitle": "Elimina Riga Preventivo",
+  "quotationId": "ID Preventivo",
+  "productId": "ID Prodotto",
+  "productCode": "Codice Prodotto",
+  "productName": "Nome Prodotto",
+  "quantity": "Quantità",
+  "unitPrice": "Prezzo Unitario",
+  "discountRate1": "Tasso Sconto 1",
+  "discountAmount1": "Importo Sconto 1",
+  "discountRate2": "Tasso Sconto 2",
+  "discountAmount2": "Importo Sconto 2",
+  "discountRate3": "Tasso Sconto 3",
+  "discountAmount3": "Importo Sconto 3",
+  "vatRate": "Aliquota IVA",
+  "vatAmount": "Importo IVA",
+  "lineTotal": "Totale Riga (Escl. IVA)",
+  "lineGrandTotal": "Totale Riga (Incl. IVA)",
+  "description": "Descrizione",
+  "createdDate": "Data Creazione",
+  "updatedDate": "Data Aggiornamento",
+  "actions": "Azioni",
+  "search": "Cerca",
+  "filterByQuotationId": "Filtra per Preventivo",
+  "filterByProductCode": "Filtra per Codice Prodotto",
+  "filterByProductName": "Filtra per Nome Prodotto",
+  "filterByQuantityRange": "Filtra per Intervallo Quantità",
+  "filterByUnitPriceRange": "Filtra per Intervallo Prezzo Unitario",
+  "filterByLineTotalRange": "Filtra per Intervallo Totale Riga",
+  "filterByLineGrandTotalRange": "Filtra per Intervallo Totale Generale Riga",
+  "noData": "Nessun dato trovato",
+  "confirmDelete": "Sei sicuro di voler eliminare questa riga del preventivo?",
+  "createSuccess": "Riga preventivo creata con successo",
+  "updateSuccess": "Riga preventivo aggiornata con successo",
+  "deleteSuccess": "Riga preventivo eliminata con successo",
+  "createError": "Si è verificato un errore durante la creazione della riga preventivo",
+  "updateError": "Si è verificato un errore durante l'aggiornamento della riga preventivo",
+  "deleteError": "Si è verificato un errore durante l'eliminazione della riga preventivo",
+  "quotationIdRequired": "L'ID Preventivo è obbligatorio",
+  "productIdRequired": "La selezione del prodotto è obbligatoria",
+  "productNameRequired": "Il nome del prodotto è obbligatorio",
+  "productNameMaxLength": "Il nome del prodotto deve essere al massimo 250 caratteri",
+  "productCodeMaxLength": "Il codice del prodotto deve essere al massimo 100 caratteri",
+  "quantityRequired": "La quantità è obbligatoria",
+  "quantityMin": "La quantità deve essere 0 o maggiore",
+  "unitPriceRequired": "Il prezzo unitario è obbligatorio",
+  "unitPriceMin": "Il prezzo unitario deve essere 0 o maggiore",
+  "discountRate1Range": "Il tasso sconto 1 deve essere tra 0 e 100",
+  "discountRate2Range": "Il tasso sconto 2 deve essere tra 0 e 100",
+  "discountRate3Range": "Il tasso sconto 3 deve essere tra 0 e 100",
+  "discountAmount1Min": "L'importo sconto 1 deve essere 0 o maggiore",
+  "discountAmount2Min": "L'importo sconto 2 deve essere 0 o maggiore",
+  "discountAmount3Min": "L'importo sconto 3 deve essere 0 o maggiore",
+  "vatRateRequired": "L'aliquota IVA è obbligatoria",
+  "vatRateRange": "L'aliquota IVA deve essere tra 0 e 100",
+  "descriptionMaxLength": "La descrizione deve essere al massimo 250 caratteri",
+  "selectQuotation": "Seleziona Preventivo",
+  "selectProduct": "Seleziona Prodotto",
+  "enterProductCode": "Inserisci Codice Prodotto",
+  "enterProductName": "Inserisci Nome Prodotto",
+  "enterQuantity": "Inserisci Quantità",
+  "enterUnitPrice": "Inserisci Prezzo Unitario",
+  "enterDiscountRate1": "Inserisci Tasso Sconto 1 (0-100, Opzionale)",
+  "enterDiscountAmount1": "Inserisci Importo Sconto 1 (Opzionale)",
+  "enterDiscountRate2": "Inserisci Tasso Sconto 2 (0-100, Opzionale)",
+  "enterDiscountAmount2": "Inserisci Importo Sconto 2 (Opzionale)",
+  "enterDiscountRate3": "Inserisci Tasso Sconto 3 (0-100, Opzionale)",
+  "enterDiscountAmount3": "Inserisci Importo Sconto 3 (Opzionale)",
+  "enterVatRate": "Inserisci Aliquota IVA (0-100)",
+  "enterDescription": "Inserisci Descrizione (Opzionale)",
+  "calculation": "Calcolo",
+  "calculationBreakdown": "Ripartizione Calcolo",
+  "subtotal": "Subtotale",
+  "afterDiscount1": "Dopo Sconto 1",
+  "afterDiscount2": "Dopo Sconto 2",
+  "afterDiscount3": "Dopo Sconto 3",
+  "vatBreakdown": "Ripartizione IVA",
+  "grandTotal": "Totale Generale",
+  "loading": "Caricamento...",
+  "save": "Salva",
+  "cancel": "Annulla",
+  "close": "Chiudi",
+  "clearFilters": "Pulisci Filtri",
+  "applyFilters": "Applica Filtri",
+  "minQuantity": "Quantità Min",
+  "maxQuantity": "Quantità Max",
+  "minUnitPrice": "Prezzo Unitario Min",
+  "maxUnitPrice": "Prezzo Unitario Max",
+  "minLineTotal": "Totale Riga Min",
+  "maxLineTotal": "Totale Riga Max",
+  "minLineGrandTotal": "Totale Generale Riga Min",
+  "maxLineGrandTotal": "Totale Generale Riga Max",
   "percentage": "%",
-  "getByQuotation": "Get by Quotation",
-  "allLines": "All Lines",
-  "linesForQuotation": "Quotation Lines",
-  "noLinesForQuotation": "No lines found for this quotation",
-  "calculationPreview": "Calculation Preview",
-  "baseAmount": "Base Amount",
-  "discountsApplied": "Discounts Applied",
-  "vatApplied": "VAT Applied",
-  "finalAmount": "Final Amount",
+  "getByQuotation": "Ottieni per Preventivo",
+  "allLines": "Tutte le Righe",
+  "linesForQuotation": "Righe Preventivo",
+  "noLinesForQuotation": "Nessuna riga trovata per questo preventivo",
+  "calculationPreview": "Anteprima Calcolo",
+  "baseAmount": "Importo Base",
+  "discountsApplied": "Sconti Applicati",
+  "vatApplied": "IVA Applicata",
+  "finalAmount": "Importo Finale",
   "table": {
     "id": "ID",
-    "quotationId": "Quotation ID",
-    "productCode": "Product Code",
-    "productName": "Product Name",
-    "quantity": "Quantity",
-    "unitPrice": "Unit Price",
-    "discountRate1": "Discount Rate 1",
-    "discountAmount1": "Discount Amount 1",
-    "discountRate2": "Discount Rate 2",
-    "discountAmount2": "Discount Amount 2",
-    "discountRate3": "Discount Rate 3",
-    "discountAmount3": "Discount Amount 3",
-    "vatRate": "VAT Rate",
-    "vatAmount": "VAT Amount",
-    "lineTotal": "Line Total (Excl. VAT)",
-    "lineGrandTotal": "Line Total (Incl. VAT)",
-    "createdDate": "Created Date",
-    "updatedDate": "Updated Date",
-    "showing": "Showing {{from}}-{{to}} of {{total}}",
-    "page": "Page {{current}} of {{total}}"
+    "quotationId": "ID Preventivo",
+    "productCode": "Codice Prodotto",
+    "productName": "Nome Prodotto",
+    "quantity": "Quantità",
+    "unitPrice": "Prezzo Unitario",
+    "discountRate1": "Tasso Sconto 1",
+    "discountAmount1": "Importo Sconto 1",
+    "discountRate2": "Tasso Sconto 2",
+    "discountAmount2": "Importo Sconto 2",
+    "discountRate3": "Tasso Sconto 3",
+    "discountAmount3": "Importo Sconto 3",
+    "vatRate": "Aliquota IVA",
+    "vatAmount": "Importo IVA",
+    "lineTotal": "Totale Riga (Escl. IVA)",
+    "lineGrandTotal": "Totale Riga (Incl. IVA)",
+    "createdDate": "Data Creazione",
+    "updatedDate": "Data Aggiornamento",
+    "showing": "Visualizzazione {{from}}-{{to}} di {{total}}",
+    "page": "Pagina {{current}} di {{total}}"
   }
 }
