--- a/src/locales/it/title-management.json
+++ b/src/locales/it/title-management.json
@@ -1,46 +1,35 @@
 {
-  "loading": "Loading...",
-  "noData": "No data found",
-  "search": "Search...",
-  "refresh": "Refresh",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
-  "delete": "Delete",
-  "deleting": "Deleting...",
-  "actions": "Actions",
-  "edit": "Edit",
-  "header": {
-    "title": "Title Management",
-    "description": "Manage title definitions here."
-  },
+  "menu": "Gestione Titoli",
+  "title": "Gestione Titoli",
+  "description": "Gestisci e modifica i titoli",
+  "addButton": "Aggiungi Nuovo Titolo",
+  "deleteTitle": "Elimina Titolo",
+  "deleteMessage": "Sei sicuro di voler eliminare questo titolo?",
+  "deleteSuccess": "Titolo eliminato con successo",
   "table": {
-    "id": "ID",
-    "name": "Title Name",
-    "code": "Code",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "name": "Titolo",
+    "code": "Codice",
+    "description": "Descrizione",
+    "status": "Stato",
+    "actions": "Azioni",
+    "searchPlaceholder": "Cerca titoli...",
+    "showing": "Visualizzazione {{from}}-{{to}} / {{total}}",
+    "page": "Pagina {{current}} / {{total}}",
+    "rowsPerPage": "Righe per pagina"
   },
   "form": {
-    "addTitle": "Add New Title",
-    "editTitle": "Edit Title",
-    "addDescription": "Enter new title details",
-    "editDescription": "Edit title details",
-    "titleName": "Title Name",
-    "titleNamePlaceholder": "Enter title name",
-    "titleCode": "Title Code",
-    "codePlaceholder": "Enter code (optional)",
-    "cancel": "Cancel",
-    "save": "Save",
-    "saving": "Saving..."
-  },
-  "delete": {
-    "confirmTitle": "Delete Title",
-    "confirmMessage": "Are you sure you want to delete the title {{name}}?",
-    "button": "Delete"
+    "addTitle": "Aggiungi Nuovo Titolo",
+    "editTitle": "Modifica Titolo",
+    "name": "Titolo",
+    "code": "Codice",
+    "description": "Descrizione",
+    "status": "Stato",
+    "active": "Attivo",
+    "passive": "Passivo",
+    "cancel": "Annulla",
+    "save": "Salva",
+    "required": "Obbligatorio",
+    "successAdd": "Titolo aggiunto con successo",
+    "successUpdate": "Titolo aggiornato con successo"
   }
 }
