--- a/src/locales/it/user-management.json
+++ b/src/locales/it/user-management.json
@@ -1,62 +1,38 @@
 {
   "menu": "Gestione Utenti",
+  "title": "Gestione Utenti",
   "description": "Gestisci e modifica utenti",
   "addButton": "Aggiungi Nuovo Utente",
+  "deleteTitle": "Elimina Utente",
+  "deleteMessage": "Sei sicuro di voler eliminare questo utente?",
+  "deleteSuccess": "Utente eliminato con successo",
   "table": {
-    "id": "ID",
-    "username": "Nome Utente",
+    "name": "Nome",
     "email": "Email",
-    "fullName": "Nome Completo",
     "role": "Ruolo",
     "status": "Stato",
-    "createdDate": "Data Creazione",
-    "active": "Attivo",
-    "inactive": "Inattivo",
-    "confirmed": "Confermato",
+    "actions": "Azioni",
+    "searchPlaceholder": "Cerca utenti...",
     "showing": "Visualizzazione {{from}}-{{to}} / {{total}}",
     "page": "Pagina {{current}} / {{total}}",
-    "actions": "Azioni",
-    "noData": "Nessun dato",
-    "loading": "Caricamento...",
-    "previous": "Precedente",
-    "next": "Successivo",
-    "edit": "Modifica",
-    "delete": "Elimina"
+    "rowsPerPage": "Righe per pagina"
   },
   "form": {
-    "editUser": "Modifica Utente",
-    "addUser": "Aggiungi Nuovo Utente",
-    "editDescription": "Modifica informazioni utente",
-    "addDescription": "Inserisci nuove informazioni utente",
-    "username": "Nome Utente",
-    "usernamePlaceholder": "Inserisci nome utente",
-    "email": "Email",
-    "emailPlaceholder": "Inserisci indirizzo email",
-    "password": "Password",
-    "passwordPlaceholder": "Inserisci password (min 8 car)",
+    "addTitle": "Aggiungi Nuovo Utente",
+    "editTitle": "Modifica Utente",
     "firstName": "Nome",
-    "firstNamePlaceholder": "Inserisci nome",
     "lastName": "Cognome",
-    "lastNamePlaceholder": "Inserisci cognome",
-    "phoneNumber": "Numero di Telefono",
-    "phoneNumberPlaceholder": "Inserisci numero di telefono",
+    "email": "Email",
     "role": "Ruolo",
-    "rolePlaceholder": "Inserisci ruolo",
-    "isActive": "Attivo",
-    "isActiveDescription": "Stato attivo utente",
+    "password": "Password",
+    "confirmPassword": "Conferma Password",
+    "status": "Stato",
+    "active": "Attivo",
+    "passive": "Passivo",
+    "cancel": "Annulla",
     "save": "Salva",
-    "saving": "Salvataggio...",
-    "cancel": "Annulla"
-  },
-  "stats": {
-    "totalUsers": "Totale Utenti",
-    "activeUsers": "Utenti Attivi",
-    "newThisMonth": "Nuovi Questo Mese",
-    "confirmedUsers": "Utenti Confermati",
-    "loading": "Caricamento..."
-  },
-  "delete": {
-    "confirmTitle": "Elimina Utente",
-    "confirmMessage": "Sei sicuro di voler eliminare l'utente {{username}}?"
+    "required": "Obbligatorio",
+    "successAdd": "Utente aggiunto con successo",
+    "successUpdate": "Utente aggiornato con successo"
   }
 }
