--- a/src/locales/it/approval-flow-management.json
+++ b/src/locales/it/approval-flow-management.json
@@ -1,76 +1,76 @@
 {
   "approvalFlow": {
-    "menu": "Approval Flow Management",
-    "description": "Manage and organize approval flows",
-    "addButton": "Add New Approval Flow",
+    "menu": "Gestione Flussi di Approvazione",
+    "description": "Gestisci e organizza i flussi di approvazione",
+    "addButton": "Aggiungi Nuovo Flusso",
     "table": {
       "id": "ID",
-      "documentType": "Document Type",
-      "description": "Description",
-      "isActive": "Active",
-      "createdDate": "Created Date",
-      "createdBy": "Created By",
-      "actions": "Actions",
-      "showing": "Showing {{from}}-{{to}} / {{total}}",
-      "page": "Page {{current}} / {{total}}"
+      "documentType": "Tipo Documento",
+      "description": "Descrizione",
+      "isActive": "Attivo",
+      "createdDate": "Data Creazione",
+      "createdBy": "Creato Da",
+      "actions": "Azioni",
+      "showing": "Visualizzazione {{from}}-{{to}} di {{total}}",
+      "page": "Pagina {{current}} / {{total}}"
     },
     "form": {
-      "addTitle": "Add New Approval Flow",
-      "editTitle": "Edit Approval Flow",
-      "addDescription": "Enter new approval flow information",
-      "editDescription": "Edit approval flow information",
-      "documentType": "Document Type",
-      "selectDocumentType": "Select document type",
-      "noDocumentTypeSelected": "No document type selected",
-      "documentTypeRequired": "Document type selection is required",
-      "description": "Description",
-      "descriptionPlaceholder": "Enter description (optional)",
-      "descriptionMaxLength": "Description can be at most 200 characters",
-      "isActive": "Active",
-      "isActiveDescription": "Active status of the approval flow",
-      "cancel": "Cancel",
-      "save": "Save",
-      "saving": "Saving..."
+      "addTitle": "Aggiungi Nuovo Flusso",
+      "editTitle": "Modifica Flusso",
+      "addDescription": "Inserisci informazioni nuovo flusso",
+      "editDescription": "Modifica informazioni flusso",
+      "documentType": "Tipo Documento",
+      "selectDocumentType": "Seleziona tipo documento",
+      "noDocumentTypeSelected": "Nessun tipo selezionato",
+      "documentTypeRequired": "La selezione del tipo documento è obbligatoria",
+      "description": "Descrizione",
+      "descriptionPlaceholder": "Inserisci descrizione (opzionale)",
+      "descriptionMaxLength": "La descrizione può avere max 200 caratteri",
+      "isActive": "Attivo",
+      "isActiveDescription": "Stato attivo del flusso di approvazione",
+      "cancel": "Annulla",
+      "save": "Salva",
+      "saving": "Salvataggio..."
     },
-    "loading": "Loading...",
-    "noData": "No data",
-    "active": "Active",
-    "inactive": "Inactive",
-    "previous": "Previous",
-    "next": "Next",
+    "loading": "Caricamento...",
+    "noData": "Nessun dato",
+    "active": "Attivo",
+    "inactive": "Inattivo",
+    "previous": "Precedente",
+    "next": "Successivo",
     "delete": {
-      "action": "Delete",
-      "cancel": "Cancel",
-      "confirmTitle": "Delete Approval Flow",
-      "confirmMessage": "Are you sure you want to delete this approval flow?"
+      "action": "Elimina",
+      "cancel": "Annulla",
+      "confirmTitle": "Elimina Flusso",
+      "confirmMessage": "Sei sicuro di voler eliminare questo flusso di approvazione?"
     },
     "documentType": {
-      "offer": "Offer",
-      "request": "Request",
-      "order": "Order"
+      "offer": "Offerta",
+      "request": "Richiesta",
+      "order": "Ordine"
     }
   },
   "approvalFlowStep": {
-    "title": "Flow Steps",
-    "addButton": "Add Step",
-    "empty": "No steps added yet",
-    "unknownRoleGroup": "No Role Group",
-    "stepDescription": "Approval Order: {{order}}",
+    "title": "Passaggi del Flusso",
+    "addButton": "Aggiungi Passaggio",
+    "empty": "Nessun passaggio aggiunto",
+    "unknownRoleGroup": "Nessun Gruppo Ruoli",
+    "stepDescription": "Ordine Approvazione: {{order}}",
     "form": {
-      "addTitle": "Add New Step",
-      "editTitle": "Edit Step",
-      "addDescription": "Add new flow step",
-      "editDescription": "Edit flow step information",
-      "approvalRoleGroup": "Role Group",
-      "selectRoleGroup": "Select role group",
-      "noRoleGroupSelected": "No role group selected",
-      "approvalRoleGroupIdRequired": "Role group selection is required",
-      "cancel": "Cancel",
-      "save": "Save",
-      "saving": "Saving..."
+      "addTitle": "Aggiungi Nuovo Passaggio",
+      "editTitle": "Modifica Passaggio",
+      "addDescription": "Aggiungi nuovo passaggio al flusso",
+      "editDescription": "Modifica informazioni passaggio",
+      "approvalRoleGroup": "Gruppo Ruoli",
+      "selectRoleGroup": "Seleziona gruppo ruoli",
+      "noRoleGroupSelected": "Nessun gruppo selezionato",
+      "approvalRoleGroupIdRequired": "La selezione del gruppo ruoli è obbligatoria",
+      "cancel": "Annulla",
+      "save": "Salva",
+      "saving": "Salvataggio..."
     },
     "messages": {
-      "deleteConfirm": "Are you sure you want to delete this step?"
+      "deleteConfirm": "Sei sicuro di voler eliminare questo passaggio?"
     }
   }
 }
