--- a/src/locales/it/approval-role-group-management.json
+++ b/src/locales/it/approval-role-group-management.json
@@ -1,36 +1,36 @@
 {
-  "menu": "Approval Role Group Management",
-  "description": "Manage and organize approval role groups",
-  "addButton": "Add New Group",
-  "refresh": "Refresh",
-  "searchPlaceholder": "Search...",
-  "loading": "Loading...",
-  "noData": "No data found",
-  "noDataDescription": "No records found matching your search criteria or no records added yet.",
+  "menu": "Gestione Gruppi Ruoli di Approvazione",
+  "description": "Gestisci e organizza i gruppi di ruoli di approvazione",
+  "addButton": "Aggiungi Nuovo Gruppo",
+  "refresh": "Aggiorna",
+  "searchPlaceholder": "Cerca...",
+  "loading": "Caricamento...",
+  "noData": "Nessun dato trovato",
+  "noDataDescription": "Nessun record trovato corrispondente alla ricerca o nessun record aggiunto.",
   "table": {
     "id": "ID",
-    "name": "Group Name",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "actions": "Actions",
-    "showing": "Showing {{from}}-{{to}} of {{total}} records"
+    "name": "Nome Gruppo",
+    "createdDate": "Data Creazione",
+    "createdBy": "Creato Da",
+    "actions": "Azioni",
+    "showing": "Visualizzazione {{from}}-{{to}} di {{total}} record"
   },
   "delete": {
-    "confirmTitle": "Delete Confirmation",
-    "confirmMessage": "This action cannot be undone. Do you want to continue?"
+    "confirmTitle": "Conferma Eliminazione",
+    "confirmMessage": "Questa azione non può essere annullata. Vuoi continuare?"
   },
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
-  "deleteButton": "Delete",
+  "cancel": "Annulla",
+  "save": "Salva",
+  "saving": "Salvataggio...",
+  "deleteButton": "Elimina",
   "form": {
-    "editTitle": "Edit Approval Role Group",
-    "addTitle": "Add New Approval Role Group",
-    "editDescription": "Edit approval role group information",
-    "addDescription": "Enter new approval role group information",
-    "name": "Group Name",
-    "namePlaceholder": "Enter group name",
-    "nameRequired": "Group name is required",
-    "nameMaxLength": "Group name can be at most 100 characters"
+    "editTitle": "Modifica Gruppo Ruoli",
+    "addTitle": "Aggiungi Nuovo Gruppo Ruoli",
+    "editDescription": "Modifica informazioni gruppo ruoli",
+    "addDescription": "Inserisci informazioni nuovo gruppo",
+    "name": "Nome Gruppo",
+    "namePlaceholder": "Inserisci nome gruppo",
+    "nameRequired": "Il nome del gruppo è obbligatorio",
+    "nameMaxLength": "Il nome può avere max 100 caratteri"
   }
 }
