--- a/src/locales/it/approval-user-role-management.json
+++ b/src/locales/it/approval-user-role-management.json
@@ -1,46 +1,46 @@
 {
   "approvalUserRole": {
-    "menu": "Approval User Role Management",
-    "description": "Manage and organize approval user roles",
-    "addButton": "Add New Role",
-    "searchPlaceholder": "Search...",
-    "refresh": "Refresh",
-    "loading": "Loading...",
-    "noData": "No data",
+    "menu": "Gestione Ruoli Utente di Approvazione",
+    "description": "Gestisci e organizza i ruoli utente di approvazione",
+    "addButton": "Aggiungi Nuovo Ruolo",
+    "searchPlaceholder": "Cerca...",
+    "refresh": "Aggiorna",
+    "loading": "Caricamento...",
+    "noData": "Nessun dato",
     "table": {
       "id": "ID",
-      "userFullName": "User",
-      "approvalRoleName": "Approval Role",
-      "createdDate": "Created Date",
-      "createdBy": "Created By",
-      "actions": "Actions",
-      "showing": "Showing {{from}}-{{to}} / {{total}}",
-      "page": "Page {{current}} / {{total}}",
-      "previous": "Previous",
-      "next": "Next"
+      "userFullName": "Utente",
+      "approvalRoleName": "Ruolo di Approvazione",
+      "createdDate": "Data Creazione",
+      "createdBy": "Creato Da",
+      "actions": "Azioni",
+      "showing": "Visualizzazione {{from}}-{{to}} / {{total}}",
+      "page": "Pagina {{current}} / {{total}}",
+      "previous": "Precedente",
+      "next": "Successivo"
     },
     "delete": {
-      "title": "Delete Role",
-      "confirmMessage": "Are you sure you want to delete this user role?",
-      "confirmButton": "Delete",
-      "cancelButton": "Cancel"
+      "title": "Elimina Ruolo",
+      "confirmMessage": "Sei sicuro di voler eliminare questo ruolo utente?",
+      "confirmButton": "Elimina",
+      "cancelButton": "Annulla"
     },
     "form": {
-      "editTitle": "Edit Approval User Role",
-      "addTitle": "Add New Approval User Role",
-      "editDescription": "Edit approval user role information",
-      "addDescription": "Enter new approval user role information",
-      "userId": "User",
-      "selectUser": "Select User",
-      "noUserSelected": "No user selected",
-      "approvalRoleId": "Approval Role",
-      "selectApprovalRole": "Select Approval Role",
-      "noApprovalRoleSelected": "No approval role selected",
-      "userIdRequired": "User selection is required",
-      "approvalRoleIdRequired": "Approval role selection is required",
-      "save": "Save",
-      "saving": "Saving...",
-      "cancel": "Cancel"
+      "editTitle": "Modifica Ruolo Utente",
+      "addTitle": "Aggiungi Nuovo Ruolo Utente",
+      "editDescription": "Modifica informazioni ruolo utente",
+      "addDescription": "Inserisci informazioni nuovo ruolo utente",
+      "userId": "Utente",
+      "selectUser": "Seleziona Utente",
+      "noUserSelected": "Nessun utente selezionato",
+      "approvalRoleId": "Ruolo di Approvazione",
+      "selectApprovalRole": "Seleziona Ruolo di Approvazione",
+      "noApprovalRoleSelected": "Nessun ruolo selezionato",
+      "userIdRequired": "La selezione dell'utente è obbligatoria",
+      "approvalRoleIdRequired": "La selezione del ruolo di approvazione è obbligatoria",
+      "save": "Salva",
+      "saving": "Salvataggio...",
+      "cancel": "Annulla"
     }
   }
 }
