--- a/src/locales/it/auth.json
+++ b/src/locales/it/auth.json
@@ -7,13 +7,13 @@
       "emailPlaceholder": "Email Aziendale",
       "passwordPlaceholder": "Password",
       "rememberMe": "Ricordami",
-      "forgotPassword": "Password Dimenticata?",
+      "forgotPassword": "Password dimenticata?",
       "submitButton": "Accedi",
       "processing": "Elaborazione...",
-      "sessionExpired": "La tua sessione è scaduta. Per favore, accedi di nuovo."
+      "sessionExpired": "La sessione è scaduta. Effettua nuovamente l'accesso."
     },
     "forgotPassword": {
-      "title": "Password Dimenticata",
+      "title": "Password dimenticata",
       "description": "Inserisci il tuo indirizzo email per reimpostare la password. Ti invieremo un link per la reimpostazione.",
       "emailPlaceholder": "Indirizzo Email",
       "submitButton": "Invia Richiesta di Reimpostazione",
@@ -26,20 +26,20 @@
       "confirmPasswordPlaceholder": "Conferma Password",
       "submitButton": "Reimposta Password",
       "processing": "Elaborazione...",
-      "invalidToken": "Token non valido o mancante. Controlla nuovamente il link di reimpostazione password.",
+      "invalidToken": "Token non valido o mancante. Controlla nuovamente il link.",
       "tokenNotFound": "Token non trovato"
     },
     "validation": {
       "emailInvalid": "Inserisci un indirizzo email valido",
-      "passwordRequired": "La password è richiesta",
-      "branchRequired": "La selezione della filiale è richiesta",
-      "passwordMinLength": "La password deve essere di almeno 8 caratteri",
-      "tokenRequired": "Il token è richiesto",
-      "newPasswordMinLength": "La password deve essere di almeno 6 caratteri",
-      "confirmPasswordRequired": "La conferma della password è richiesta",
+      "passwordRequired": "La password è obbligatoria",
+      "branchRequired": "La selezione della filiale è obbligatoria",
+      "passwordMinLength": "La password deve contenere almeno 8 caratteri",
+      "tokenRequired": "Il token è obbligatorio",
+      "newPasswordMinLength": "La password deve contenere almeno 6 caratteri",
+      "confirmPasswordRequired": "La conferma della password è obbligatoria",
       "passwordsMismatch": "Le password non corrispondono",
-      "currentPasswordRequired": "La password attuale è richiesta",
-      "newPasswordMaxLength": "La nuova password deve essere di massimo 100 caratteri",
+      "currentPasswordRequired": "La password attuale è obbligatoria",
+      "newPasswordMaxLength": "La nuova password deve contenere al massimo 100 caratteri",
       "newPasswordSameAsCurrent": "La nuova password non può essere uguale a quella attuale"
     }
   }
