--- a/src/locales/it/payment-type-management.json
+++ b/src/locales/it/payment-type-management.json
@@ -1,51 +1,29 @@
 {
-  "title": "Payment Type Management",
-  "headerDescription": "Manage and edit payment types",
-  "create": "New Payment Type",
-  "edit": "Edit Payment Type",
-  "editDescription": "Edit payment type information",
-  "createDescription": "Enter new payment type information",
-  "delete": "Delete",
-  "deleteTitle": "Delete Payment Type",
-  "name": "Name",
-  "namePlaceholder": "Enter payment type name",
-  "description": "Description",
-  "descriptionPlaceholder": "Enter description (optional)",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "refresh": "Refresh",
-  "loading": "Loading...",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
-  "noData": "No data found",
-  "confirmDelete": "Are you sure you want to delete this payment type?",
-  "createSuccess": "Payment type created successfully",
-  "updateSuccess": "Payment type updated successfully",
-  "deleteSuccess": "Payment type deleted successfully",
-  "createError": "An error occurred while creating payment type",
-  "updateError": "An error occurred while updating payment type",
-  "deleteError": "An error occurred while deleting payment type",
+  "title": "Gestione Tipi di Pagamento",
+  "description": "Configura e gestisci i metodi di pagamento",
+  "create": "Nuovo Tipo di Pagamento",
+  "edit": "Modifica Tipo di Pagamento",
+  "delete": "Elimina",
   "table": {
     "id": "ID",
-    "name": "Name",
-    "description": "Description",
-    "createdDate": "Created Date",
-    "updatedDate": "Updated Date",
-    "showing": "Showing {{from}}-{{to}} of {{total}}",
-    "page": "Page {{current}} of {{total}}"
+    "name": "Nome",
+    "code": "Codice",
+    "description": "Descrizione",
+    "isActive": "Attivo",
+    "actions": "Azioni"
   },
   "form": {
-    "name": {
-      "required": "Name is required",
-      "maxLength": "Name can be at most 100 characters"
-    },
-    "description": {
-      "maxLength": "Description can be at most 500 characters"
-    }
+    "name": "Nome",
+    "code": "Codice",
+    "description": "Descrizione",
+    "isActive": "Attivo",
+    "nameRequired": "Il nome è obbligatorio",
+    "codeRequired": "Il codice è obbligatorio"
+  },
+  "messages": {
+    "createSuccess": "Tipo di pagamento creato con successo",
+    "updateSuccess": "Tipo di pagamento aggiornato con successo",
+    "deleteSuccess": "Tipo di pagamento eliminato con successo",
+    "confirmDelete": "Sei sicuro di voler eliminare questo tipo di pagamento?"
   }
 }
