--- a/src/locales/it/pricing-rule.json
+++ b/src/locales/it/pricing-rule.json
@@ -1,148 +1,35 @@
 {
-  "loading": "Loading...",
-  "loadingDescription": "Loading data, please wait",
-  "list": {
-    "title": "Pricing Rules",
-    "description": "Manage and edit pricing rules",
-    "add": "Add New Rule",
-    "empty": "No pricing rules defined yet"
-  },
+  "title": "Regole di Prezzo",
+  "description": "Gestisci le regole di prezzo e gli sconti",
+  "create": "Nuova Regola",
+  "edit": "Modifica Regola",
+  "delete": "Elimina Regola",
   "table": {
-    "ruleCode": "Rule Code",
-    "ruleName": "Rule Name",
-    "ruleType": "Rule Type",
-    "validFrom": "Valid From",
-    "validTo": "Valid To",
-    "customer": "Customer",
-    "currency": "Currency",
-    "status": "Status",
-    "actions": "Actions"
+    "id": "ID",
+    "name": "Nome Regola",
+    "description": "Descrizione",
+    "priority": "Priorità",
+    "status": "Stato",
+    "startDate": "Data Inizio",
+    "endDate": "Data Fine",
+    "actions": "Azioni"
   },
   "form": {
-    "cancel": "Cancel",
-    "save": "Save",
-    "saving": "Saving...",
-    "confirm": "Confirm",
-    "update": "Update",
-    "createButton": "Create",
-    "create": "New Pricing Rule",
-    "edit": "Edit Pricing Rule",
-    "createDescription": "Enter new pricing rule information",
-    "editDescription": "Edit pricing rule information",
-    "tabs": {
-      "header": "General Information",
-      "lines": "Lines",
-      "salesmen": "Salesmen"
-    },
-    "createSuccess": "Pricing Rule Created",
-    "createSuccessMessage": "Pricing rule created successfully",
-    "createError": "Failed to Create Pricing Rule",
-    "updateSuccess": "Pricing Rule Updated",
-    "updateSuccessMessage": "Pricing rule updated successfully",
-    "updateError": "Failed to Update Pricing Rule",
-    "error": "Error",
-    "lines": {
-      "required": "At least 1 line must be added",
-      "requiredMessage": "Please add at least one line",
-      "stokCodeRequired": "Stock Code Required",
-      "stokCodeRequiredMessage": "Stock code must be entered for all lines",
-      "currencyCodeRequired": "Currency Type Required",
-      "currencyCodeRequiredMessage": "Currency type must be selected for all lines",
-      "minQuantityInvalid": "Invalid Min Quantity",
-      "minQuantityInvalidMessage": "Minimum quantity cannot be less than 0"
-    }
+    "name": "Nome Regola",
+    "description": "Descrizione",
+    "priority": "Priorità",
+    "status": "Stato",
+    "active": "Attivo",
+    "passive": "Inattivo",
+    "startDate": "Data Inizio",
+    "endDate": "Data Fine",
+    "conditions": "Condizioni",
+    "actions": "Azioni Prezzo"
   },
-  "delete": {
-    "button": "Delete",
-    "confirmTitle": "Delete Confirmation",
-    "confirmMessage": "Are you sure you want to delete this record?"
-  },
-  "salesmen": {
-    "title": "Salesmen",
-    "addSuccess": "Salesman Added",
-    "addSuccessMessage": "Salesman successfully added to pricing rule",
-    "addError": "Error",
-    "addErrorMessage": "Error occurred while adding salesman",
-    "deleteSuccess": "Salesman Removed",
-    "deleteSuccessMessage": "Salesman successfully removed from pricing rule",
-    "deleteError": "Error",
-    "deleteErrorMessage": "Error occurred while removing salesman",
-    "add": "Add Salesman",
-    "empty": "No salesmen added yet",
-    "emptyDescription": "Will be valid for all salesmen",
-    "salesman": "Salesman"
-  },
-  "header": {
-    "ruleType": "Rule Type",
-    "ruleCode": "Rule Code",
-    "ruleName": "Rule Name",
-    "validFrom": "Valid From",
-    "validTo": "Valid To",
-    "customer": "Customer",
-    "erpCustomerCode": "ERP Customer Code",
-    "branchCode": "Branch Code",
-    "currencyCode": "Currency",
-    "priceIncludesVat": "Price Includes VAT",
-    "isActive": "Active",
-    "ruleTypePlaceholder": "Select rule type",
-    "validToMustBeAfterValidFrom": "End date must be after start date",
-    "ruleCodePlaceholder": "Enter rule code",
-    "ruleNamePlaceholder": "Enter rule name",
-    "customerPlaceholder": "Select customer (Optional)",
-    "selectCustomer": "Select Customer",
-    "branchCodePlaceholder": "Branch code (Optional)",
-    "selectCurrency": "Please select currency"
-  },
-  "ruleType": {
-    "demand": "Demand",
-    "quotation": "Quotation",
-    "order": "Order",
-    "unknown": "Unknown"
-  },
-  "lines": {
-    "title": "Pricing Rule Lines",
-    "add": "Add Line",
-    "empty": "No lines added yet",
-    "stokCode": "Stock Code",
-    "minQuantity": "Min Quantity",
-    "maxQuantity": "Max Quantity",
-    "fixedUnitPrice": "Fixed Unit Price",
-    "discount1": "Discount 1 %",
-    "discount2": "Discount 2 %",
-    "discount3": "Discount 3 %",
-    "discount1Rate": "Discount Rate 1",
-    "discount1Amount": "Discount Amount 1",
-    "discount2Rate": "Discount Rate 2",
-    "discount2Amount": "Discount Amount 2",
-    "discount3Rate": "Discount Rate 3",
-    "discount3Amount": "Discount Amount 3",
-    "minQuantityMin": "Minimum quantity cannot be less than 0",
-    "minQuantityMax": "Maximum quantity is too large",
-    "maxQuantityMin": "Maximum quantity must be greater than 0",
-    "maxQuantityMustBeGreaterThanMin": "Maximum quantity must be greater than minimum quantity",
-    "fixedUnitPriceMin": "Unit price must be greater than 0",
-    "required": "At least one line must be added",
-    "selectStock": "Select Stock",
-    "selectProduct": "Select Product",
-    "stokCodePlaceholder": "Product code",
-    "stokCodeRequired": "Stock code is required",
-    "minQuantityRequired": "Min quantity is required and cannot be less than 0",
-    "maxQuantityRequired": "Max quantity is required and must be greater than 0",
-    "fixedUnitPriceRequired": "List price is required and must be greater than 0",
-    "currencyCodeRequired": "Currency type is required",
-    "selectCurrency": "Select currency",
-    "minQuantityInvalid": "Invalid Min Quantity",
-    "minQuantityInvalidMessage": "Minimum quantity cannot be less than 0"
-  },
-  "card": {
-    "customer": "Customer",
-    "lines": "lines",
-    "salesmen": "salesmen",
-    "vatIncluded": "VAT Included"
-  },
-  "status": {
-    "active": "Active",
-    "inactive": "Inactive",
-    "expired": "Expired"
+  "messages": {
+    "createSuccess": "Regola creata con successo",
+    "updateSuccess": "Regola aggiornata con successo",
+    "deleteSuccess": "Regola eliminata con successo",
+    "confirmDelete": "Sei sicuro di voler eliminare questa regola?"
   }
 }
