--- a/src/locales/it/product-pricing-management.json
+++ b/src/locales/it/product-pricing-management.json
@@ -1,118 +1,118 @@
 {
-  "title": "Product Pricing Management",
-  "description": "Manage and edit product pricings",
-  "create": "New Pricing",
-  "createDescription": "Enter new pricing information",
-  "edit": "Edit Pricing",
-  "editDescription": "Edit pricing information",
-  "delete": "Delete",
-  "deleteTitle": "Delete Pricing",
-  "erpProductCode": "ERP Product Code",
-  "erpGroupCode": "ERP Product Group Code",
-  "currency": "Currency",
-  "listPrice": "List Price",
-  "costPrice": "Cost Price",
-  "discount1": "Discount 1",
-  "discount2": "Discount 2",
-  "discount3": "Discount 3",
-  "finalPrice": "Final Price",
-  "profitMargin": "Profit Margin",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "filterByErpProductCode": "Filter by ERP Product Code",
-  "filterByErpGroupCode": "Filter by ERP Group Code",
-  "filterByCurrency": "Filter by Currency",
-  "filterByPriceRange": "Filter by Price Range",
-  "filterByDiscountRange": "Filter by Discount Range",
-  "noData": "No data found",
-  "confirmDelete": "Are you sure you want to delete this pricing?",
-  "createSuccess": "Pricing created successfully",
-  "updateSuccess": "Pricing updated successfully",
-  "deleteSuccess": "Pricing deleted successfully",
-  "createError": "An error occurred while creating pricing",
-  "updateError": "An error occurred while updating pricing",
-  "deleteError": "An error occurred while deleting pricing",
-  "erpProductCodeRequired": "ERP product code is required",
-  "erpProductCodeMaxLength": "ERP product code must be at most 50 characters",
-  "erpGroupCodeRequired": "ERP product group code is required",
-  "erpGroupCodeMaxLength": "ERP product group code must be at most 50 characters",
-  "currencyRequired": "Currency selection is required",
-  "currencyMaxLength": "Currency must be at most 50 characters",
-  "listPriceRequired": "List price is required",
-  "listPriceMin": "List price must be 0 or greater",
-  "costPriceRequired": "Cost price is required",
-  "costPriceMin": "Cost price must be 0 or greater",
-  "discount1Range": "Discount 1 must be between 0 and 100",
-  "discount2Range": "Discount 2 must be between 0 and 100",
-  "discount3Range": "Discount 3 must be between 0 and 100",
-  "enterErpProductCode": "Enter ERP Product Code",
-  "enterErpGroupCode": "Enter ERP Product Group Code",
-  "selectCurrency": "Please select currency",
-  "enterListPrice": "Enter List Price",
-  "enterCostPrice": "Enter Cost Price",
-  "enterDiscount1": "Enter Discount 1 (0-100, Optional)",
-  "enterDiscount2": "Enter Discount 2 (0-100, Optional)",
-  "enterDiscount3": "Enter Discount 3 (0-100, Optional)",
-  "priceCalculation": "Price Calculation",
-  "finalPriceAfterDiscounts": "Final Price After Discounts",
-  "loading": "Loading...",
-  "save": "Save",
-  "saving": "Saving...",
-  "cancel": "Cancel",
-  "close": "Close",
-  "clearFilters": "Clear Filters",
-  "applyFilters": "Apply Filters",
-  "minPrice": "Min Price",
-  "maxPrice": "Max Price",
-  "minDiscount": "Min Discount",
-  "maxDiscount": "Max Discount",
+  "title": "Gestione Prezzi Prodotto",
+  "description": "Gestisci e modifica i prezzi dei prodotti",
+  "create": "Nuovo Prezzo",
+  "createDescription": "Inserisci le informazioni del nuovo prezzo",
+  "edit": "Modifica Prezzo",
+  "editDescription": "Modifica le informazioni del prezzo",
+  "delete": "Elimina",
+  "deleteTitle": "Elimina Prezzo",
+  "erpProductCode": "Codice Prodotto ERP",
+  "erpGroupCode": "Codice Gruppo Prodotti ERP",
+  "currency": "Valuta",
+  "listPrice": "Prezzo di Listino",
+  "costPrice": "Prezzo di Costo",
+  "discount1": "Sconto 1",
+  "discount2": "Sconto 2",
+  "discount3": "Sconto 3",
+  "finalPrice": "Prezzo Finale",
+  "profitMargin": "Margine di Profitto",
+  "createdDate": "Data Creazione",
+  "updatedDate": "Data Aggiornamento",
+  "actions": "Azioni",
+  "search": "Cerca",
+  "filterByErpProductCode": "Filtra per Codice Prodotto ERP",
+  "filterByErpGroupCode": "Filtra per Codice Gruppo Prodotti ERP",
+  "filterByCurrency": "Filtra per Valuta",
+  "filterByPriceRange": "Filtra per Intervallo di Prezzo",
+  "filterByDiscountRange": "Filtra per Intervallo di Sconto",
+  "noData": "Nessun dato trovato",
+  "confirmDelete": "Sei sicuro di voler eliminare questo prezzo?",
+  "createSuccess": "Prezzo creato con successo",
+  "updateSuccess": "Prezzo aggiornato con successo",
+  "deleteSuccess": "Prezzo eliminato con successo",
+  "createError": "Si è verificato un errore durante la creazione del prezzo",
+  "updateError": "Si è verificato un errore durante l'aggiornamento del prezzo",
+  "deleteError": "Si è verificato un errore durante l'eliminazione del prezzo",
+  "erpProductCodeRequired": "Il codice prodotto ERP è obbligatorio",
+  "erpProductCodeMaxLength": "Il codice prodotto ERP deve contenere al massimo 50 caratteri",
+  "erpGroupCodeRequired": "Il codice gruppo prodotti ERP è obbligatorio",
+  "erpGroupCodeMaxLength": "Il codice gruppo prodotti ERP deve contenere al massimo 50 caratteri",
+  "currencyRequired": "La selezione della valuta è obbligatoria",
+  "currencyMaxLength": "La valuta deve contenere al massimo 50 caratteri",
+  "listPriceRequired": "Il prezzo di listino è obbligatorio",
+  "listPriceMin": "Il prezzo di listino deve essere 0 o maggiore",
+  "costPriceRequired": "Il prezzo di costo è obbligatorio",
+  "costPriceMin": "Il prezzo di costo deve essere 0 o maggiore",
+  "discount1Range": "Lo sconto 1 deve essere compreso tra 0 e 100",
+  "discount2Range": "Lo sconto 2 deve essere compreso tra 0 e 100",
+  "discount3Range": "Lo sconto 3 deve essere compreso tra 0 e 100",
+  "enterErpProductCode": "Inserisci Codice Prodotto ERP",
+  "enterErpGroupCode": "Inserisci Codice Gruppo Prodotti ERP",
+  "selectCurrency": "Seleziona valuta",
+  "enterListPrice": "Inserisci Prezzo di Listino",
+  "enterCostPrice": "Inserisci Prezzo di Costo",
+  "enterDiscount1": "Inserisci Sconto 1 (0-100, Opzionale)",
+  "enterDiscount2": "Inserisci Sconto 2 (0-100, Opzionale)",
+  "enterDiscount3": "Inserisci Sconto 3 (0-100, Opzionale)",
+  "priceCalculation": "Calcolo Prezzo",
+  "finalPriceAfterDiscounts": "Prezzo Finale Dopo Sconti",
+  "loading": "Caricamento...",
+  "save": "Salva",
+  "saving": "Salvataggio...",
+  "cancel": "Annulla",
+  "close": "Chiudi",
+  "clearFilters": "Cancella Filtri",
+  "applyFilters": "Applica Filtri",
+  "minPrice": "Prezzo Minimo",
+  "maxPrice": "Prezzo Massimo",
+  "minDiscount": "Sconto Minimo",
+  "maxDiscount": "Sconto Massimo",
   "percentage": "%",
-  "try": "Turkish Lira",
-  "usd": "US Dollar",
+  "try": "Lira Turca",
+  "usd": "Dollaro USA",
   "eur": "Euro",
-  "gbp": "British Pound",
-  "jpy": "Japanese Yen",
-  "calculateFinalPrice": "Calculate Final Price",
-  "profitMarginLabel": "Profit Margin",
-  "highProfit": "High Profit",
-  "mediumProfit": "Medium Profit",
-  "lowProfit": "Low Profit",
-  "negativeProfit": "Loss",
-  "duplicateWarning": "This product code, group code, and currency combination already exists. Do you want to continue?",
-  "duplicateExists": "This combination already exists",
-  "checkingDuplicate": "Checking...",
-  "noDuplicate": "This combination is available",
-  "selectStokCode": "Select stock",
-    "selectStok": "Select Stock",
-    "erpGroupCodePlaceholder": "Automatically filled when stock is selected",
-    "profitAmount": "Profit Amount",
-  "profitPercentage": "Profit Percentage",
-  "searchProductCode": "Search Product Code",
-  "searchGroupCode": "Search Group Code",
-  "stockStatus": "STOCK STATUS",
-  "noStockTracking": "No Stock Tracking",
-  "priceAndDiscount": "PRICE & DISCOUNT",
+  "gbp": "Sterlina Britannica",
+  "jpy": "Yen Giapponese",
+  "calculateFinalPrice": "Calcola Prezzo Finale",
+  "profitMarginLabel": "Margine di Profitto",
+  "highProfit": "Alto Profitto",
+  "mediumProfit": "Medio Profitto",
+  "lowProfit": "Basso Profitto",
+  "negativeProfit": "Perdita",
+  "duplicateWarning": "Questa combinazione di codice prodotto, codice gruppo e valuta esiste già. Vuoi continuare?",
+  "duplicateExists": "Questa combinazione esiste già",
+  "checkingDuplicate": "Controllo...",
+  "noDuplicate": "Questa combinazione è disponibile",
+  "selectStokCode": "Seleziona stock",
+  "selectStok": "Seleziona Stock",
+  "erpGroupCodePlaceholder": "Compilato automaticamente quando viene selezionato lo stock",
+  "profitAmount": "Importo Profitto",
+  "profitPercentage": "Percentuale Profitto",
+  "searchProductCode": "Cerca Codice Prodotto",
+  "searchGroupCode": "Cerca Codice Gruppo",
+  "stockStatus": "STATO MAGAZZINO",
+  "noStockTracking": "Nessun Tracciamento Stock",
+  "priceAndDiscount": "PREZZO E SCONTO",
   "table": {
     "id": "ID",
-    "erpProductCode": "ERP Product Code",
-    "erpGroupCode": "ERP Product Group Code",
-    "currency": "Currency",
-    "listPrice": "List Price",
-    "costPrice": "Cost Price",
-    "discount1": "Discount 1",
-    "discount2": "Discount 2",
-    "discount3": "Discount 3",
-    "finalPrice": "Final Price",
-    "profitMargin": "Profit Margin",
-    "createdDate": "Created Date",
-    "updatedDate": "Updated Date",
-    "showing": "Showing {{from}}-{{to}} of {{total}}",
-    "page": "Page {{current}} of {{total}}"
+    "erpProductCode": "Codice Prodotto ERP",
+    "erpGroupCode": "Codice Gruppo Prodotti ERP",
+    "currency": "Valuta",
+    "listPrice": "Prezzo di Listino",
+    "costPrice": "Prezzo di Costo",
+    "discount1": "Sconto 1",
+    "discount2": "Sconto 2",
+    "discount3": "Sconto 3",
+    "finalPrice": "Prezzo Finale",
+    "profitMargin": "Margine di Profitto",
+    "createdDate": "Data Creazione",
+    "updatedDate": "Data Aggiornamento",
+    "showing": "Visualizzazione {{from}}-{{to}} di {{total}}",
+    "page": "Pagina {{current}} di {{total}}"
   },
-  "previous": "Previous",
-  "next": "Next",
-  "deleteConfirmTitle": "Delete Confirmation",
-  "deleteConfirmMessage": "Are you sure you want to delete this record? This action cannot be undone."
+  "previous": "Precedente",
+  "next": "Successivo",
+  "deleteConfirmTitle": "Conferma Eliminazione",
+  "deleteConfirmMessage": "Sei sicuro di voler eliminare questo record? Questa azione non può essere annullata."
 }
