--- a/src/locales/it/product-select-dialog.json
+++ b/src/locales/it/product-select-dialog.json
@@ -1,10 +1,16 @@
 {
-  "title": "Select Product",
-  "description": "Select a product to add to the quotation line",
-  "product": "PRODUCT",
-  "noProducts": "No products found",
-  "noResults": "No search results found",
-  "searchPlaceholder": "Search by product code or name...",
-  "voiceSearch": "Voice search",
-  "loading": "Loading"
+  "title": "Selezione Prodotto",
+  "searchPlaceholder": "Cerca prodotto...",
+  "select": "Seleziona",
+  "cancel": "Annulla",
+  "columns": {
+    "code": "Codice",
+    "name": "Nome",
+    "description": "Descrizione",
+    "price": "Prezzo",
+    "currency": "Valuta",
+    "stock": "Magazzino"
+  },
+  "noData": "Nessun prodotto trovato",
+  "loading": "Caricamento prodotti..."
 }
