--- a/src/locales/it/shipping-address-management.json
+++ b/src/locales/it/shipping-address-management.json
@@ -1,77 +1,77 @@
 {
-  "title": "Shipping Address Management",
-  "create": "New Shipping Address",
-  "edit": "Edit Shipping Address",
-  "delete": "Delete",
-  "address": "Address",
-  "postalCode": "Postal Code",
-  "contactPerson": "Contact Person",
-  "phone": "Phone",
-  "notes": "Notes",
-  "customerId": "Customer",
-  "countryId": "Country",
-  "cityId": "City",
-  "districtId": "District",
-  "customerName": "Customer Name",
-  "countryName": "Country Name",
-  "cityName": "City Name",
-  "districtName": "District Name",
-  "location": "Location",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "refresh": "Refresh",
-  "noData": "No data found",
-  "confirmDelete": "Delete Shipping Address",
-  "confirmDeleteMessage": "Are you sure you want to delete this shipping address? This action cannot be undone.",
-  "createSuccess": "Shipping address created successfully",
-  "updateSuccess": "Shipping address updated successfully",
-  "deleteSuccess": "Shipping address deleted successfully",
-  "createError": "An error occurred while creating shipping address",
-  "updateError": "An error occurred while updating shipping address",
-  "deleteError": "An error occurred while deleting shipping address",
-  "addressRequired": "Address is required",
-  "addressMaxLength": "Address can be at most 150 characters",
-  "postalCodeMaxLength": "Postal code can be at most 20 characters",
-  "contactPersonMaxLength": "Contact person can be at most 100 characters",
-  "phoneMaxLength": "Phone can be at most 20 characters",
-  "notesMaxLength": "Notes can be at most 100 characters",
-  "customerIdRequired": "Customer selection is required",
-  "enterAddress": "Enter Address",
-  "enterPostalCode": "Enter Postal Code",
-  "enterContactPerson": "Enter Contact Person",
-  "enterPhone": "Enter Phone",
-  "enterNotes": "Enter Notes",
-  "selectCustomer": "Select Customer",
-  "selectCountry": "Select Country",
-  "selectCity": "Select City",
-  "selectDistrict": "Select District",
-  "noCountrySelected": "No country selected",
-  "noCitySelected": "No city selected",
-  "noDistrictSelected": "No district selected",
-  "selectCountryFirst": "Select country first",
-  "selectCityFirst": "Select city first",
-  "createDescription": "Enter new shipping address information",
-  "editDescription": "Edit shipping address information",
+  "title": "Gestione Indirizzi di Spedizione",
+  "create": "Nuovo Indirizzo di Spedizione",
+  "edit": "Modifica Indirizzo di Spedizione",
+  "delete": "Elimina",
+  "address": "Indirizzo",
+  "postalCode": "Codice Postale",
+  "contactPerson": "Persona di Contatto",
+  "phone": "Telefono",
+  "notes": "Note",
+  "customerId": "Cliente",
+  "countryId": "Paese",
+  "cityId": "Città",
+  "districtId": "Distretto",
+  "customerName": "Nome Cliente",
+  "countryName": "Nome Paese",
+  "cityName": "Nome Città",
+  "districtName": "Nome Distretto",
+  "location": "Posizione",
+  "createdDate": "Data Creazione",
+  "updatedDate": "Data Aggiornamento",
+  "actions": "Azioni",
+  "search": "Cerca",
+  "refresh": "Aggiorna",
+  "noData": "Nessun dato trovato",
+  "confirmDelete": "Elimina Indirizzo di Spedizione",
+  "confirmDeleteMessage": "Sei sicuro di voler eliminare questo indirizzo di spedizione? Questa azione non può essere annullata.",
+  "createSuccess": "Indirizzo di spedizione creato con successo",
+  "updateSuccess": "Indirizzo di spedizione aggiornato con successo",
+  "deleteSuccess": "Indirizzo di spedizione eliminato con successo",
+  "createError": "Si è verificato un errore durante la creazione dell'indirizzo di spedizione",
+  "updateError": "Si è verificato un errore durante l'aggiornamento dell'indirizzo di spedizione",
+  "deleteError": "Si è verificato un errore durante l'eliminazione dell'indirizzo di spedizione",
+  "addressRequired": "L'indirizzo è obbligatorio",
+  "addressMaxLength": "L'indirizzo può contenere al massimo 150 caratteri",
+  "postalCodeMaxLength": "Il codice postale può contenere al massimo 20 caratteri",
+  "contactPersonMaxLength": "La persona di contatto può contenere al massimo 100 caratteri",
+  "phoneMaxLength": "Il telefono può contenere al massimo 20 caratteri",
+  "notesMaxLength": "Le note possono contenere al massimo 100 caratteri",
+  "customerIdRequired": "La selezione del cliente è obbligatoria",
+  "enterAddress": "Inserisci Indirizzo",
+  "enterPostalCode": "Inserisci Codice Postale",
+  "enterContactPerson": "Inserisci Persona di Contatto",
+  "enterPhone": "Inserisci Telefono",
+  "enterNotes": "Inserisci Note",
+  "selectCustomer": "Seleziona Cliente",
+  "selectCountry": "Seleziona Paese",
+  "selectCity": "Seleziona Città",
+  "selectDistrict": "Seleziona Distretto",
+  "noCountrySelected": "Nessun paese selezionato",
+  "noCitySelected": "Nessuna città selezionata",
+  "noDistrictSelected": "Nessun distretto selezionato",
+  "selectCountryFirst": "Seleziona prima il paese",
+  "selectCityFirst": "Seleziona prima la città",
+  "createDescription": "Inserisci le informazioni del nuovo indirizzo di spedizione",
+  "editDescription": "Modifica le informazioni dell'indirizzo di spedizione",
   "table": {
     "id": "ID",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}",
-    "customerName": "Customer Name",
-    "address": "Address",
-    "postalCode": "Postal Code",
-    "contactPerson": "Contact Person",
-    "phone": "Phone",
-    "location": "Location",
-    "createdDate": "Created Date",
-    "actions": "Actions"
+    "showing": "Visualizzazione {{from}}-{{to}} / {{total}}",
+    "page": "Pagina {{current}} / {{total}}",
+    "customerName": "Nome Cliente",
+    "address": "Indirizzo",
+    "postalCode": "Codice Postale",
+    "contactPerson": "Persona di Contatto",
+    "phone": "Telefono",
+    "location": "Posizione",
+    "createdDate": "Data Creazione",
+    "actions": "Azioni"
   },
-  "loading": "Loading...",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
-  "deleting": "Deleting..."
+  "loading": "Caricamento...",
+  "previous": "Precedente",
+  "next": "Successivo",
+  "cancel": "Annulla",
+  "save": "Salva",
+  "saving": "Salvataggio...",
+  "deleting": "Eliminazione..."
 }
