--- a/src/locales/it/user-detail-management.json
+++ b/src/locales/it/user-detail-management.json
@@ -1,45 +1,26 @@
 {
-  "title": "User Details",
-  "description": "Edit your profile information",
-  "profilePicture": "Profile Picture",
-  "height": "Height (cm)",
-  "weight": "Weight (kg)",
-  "gender": "Gender",
-  "enterHeight": "Enter Height (cm)",
-  "enterWeight": "Enter Weight (kg)",
-  "enterDescription": "Enter Description",
-  "selectGender": "Select Gender",
-  "noGenderSelected": "Not Specified",
-  "changeProfilePicture": "Change Profile Picture",
-  "uploading": "Uploading...",
-  "createSuccess": "User detail created successfully",
-  "updateSuccess": "User detail updated successfully",
-  "createError": "An error occurred while creating user detail",
-  "updateError": "An error occurred while updating user detail",
-  "uploadProfilePictureSuccess": "Profile picture uploaded successfully",
-  "uploadProfilePictureError": "An error occurred while uploading profile picture",
-  "fileSizeError": "File size cannot exceed 5MB",
-  "fileTypeError": "Only image files can be uploaded",
-  "profilePictureUrlMaxLength": "Profile picture URL must be at most 500 characters",
-  "heightMin": "Height must be 0 or greater",
-  "heightMax": "Height must be at most 300 cm",
-  "weightMin": "Weight must be 0 or greater",
-  "weightMax": "Weight must be at most 500 kg",
-  "descriptionMaxLength": "Description must be at most 2000 characters",
-  "genderNotSpecified": "Not Specified",
-  "genderMale": "Male",
-  "genderFemale": "Female",
-  "genderOther": "Other",
-  "loading": "Loading...",
-  "loadingDescription": "Loading data, please wait",
-  "cancel": "Cancel",
-  "saving": "Saving...",
-  "save": "Save",
-  "changePassword": "Change Password",
-  "currentPassword": "Current Password",
-  "enterCurrentPassword": "Enter your current password",
-  "newPassword": "New Password",
-  "enterNewPassword": "Enter your new password (min 6 chars)",
-  "changingPassword": "Changing...",
-  "changePasswordButton": "Change Password"
+  "title": "Gestione Dettagli Utente",
+  "description": "Visualizza e gestisci dettagli utente",
+  "sections": {
+    "personalInfo": "Informazioni Personali",
+    "accountSettings": "Impostazioni Account",
+    "preferences": "Preferenze"
+  },
+  "fields": {
+    "firstName": "Nome",
+    "lastName": "Cognome",
+    "email": "Email",
+    "phone": "Telefono",
+    "language": "Lingua",
+    "timezone": "Fuso Orario"
+  },
+  "actions": {
+    "save": "Salva Modifiche",
+    "cancel": "Annulla",
+    "changePassword": "Cambia Password"
+  },
+  "messages": {
+    "successUpdate": "Dettagli utente aggiornati con successo",
+    "errorUpdate": "Errore durante l'aggiornamento dei dettagli utente"
+  }
 }
